# go2_ros

./: .data  .gitattributes  .gitignore  3d_map.ply  PLAN.md  README.md  conftest.py  constraints.txt  handoff.md  map_1780704837.pgm  map_1780704837.yaml
.agents/skills/boot-up/: SKILL.md
.agents/skills/nav2-goal-frame-debug/: SKILL.md
.agents/skills/omi-mic-fallback/: SKILL.md
.agents/skills/ros2-clean-restart/: SKILL.md
.agents/skills/rviz-single-instance/: SKILL.md
.agents/skills/session-audit/: SKILL.md
.agents/skills/wireless-foundation-guardrails/: SKILL.md
models/go2/: model_7850.pt
scripts/: check_live_graph.sh  check_semantic_nav_smoke.sh  inspect_camera_image.py  probe_openrouter_scene.py  run_isaac_bridge_ros.sh  run_isaac_office_backend.sh  run_isaac_semantic_teach.sh  run_robot_live.sh  run_semantic_nav_resume.sh  run_semantic_nav_smoke.sh  run_semantic_nav_teach.sh  run_sparky_full_system.sh  sparky_ros_env.sh
src/: .gitignore  AGENTS.md  CODEX_CONTINUE_WORK.md  GO2_GLOBAL_HANDOFF_FOR_CODEX.md  README.md  README_AGENTIC_BUNDLE.txt  README_FIX.txt  SPARKY_UPDATED_NOTES.txt  voice_assistant
src/coco_detector/coco_detector/: coco_detector_node.py
src/council/: .coverage  ARCHITECTURE_SUMMARY.md  COUNCIL_HANDOFF_FOR_CODEX.md  IMG_STITCHING_IMU_INTEGRATION.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py  test_council.py  test_integration.py  validate_architecture.py
src/council/img_debug/: trajectory.json
src/council/img_debug/pointclouds/: pointcloud.ply
src/council/launch/: council.launch.py
src/council/rviz/: council_agents.rviz
src/go2_agentic_motion_skills/: GO2_AGENTIC_MOTION_SKILLS_HANDOFF_FOR_CODEX.md  package.xml  setup.cfg  setup.py
src/go2_agentic_motion_skills/go2_agentic_motion_skills/: motion_skill_agent_node.py
src/go2_agentic_motion_skills/launch/: motion_skills.launch.py
src/go2_agentic_multiagent_voice_nav/: GO2_AGENTIC_MULTIAGENT_VOICE_NAV_HANDOFF_FOR_CODEX.md  README_LOCAL_STT.txt  package.xml  setup.cfg  setup.py
src/go2_agentic_multiagent_voice_nav/config/: agent_params.yaml
src/go2_agentic_multiagent_voice_nav/go2_agentic_multiagent_voice_nav/: camera_agent_node.py  dialogue_orchestrator_node.py  local_omi_stt_node.py  place_resolver.py  speaker_tts_node.py  utils.py
src/go2_agentic_multiagent_voice_nav/launch/: multiagent_teach.launch.py
src/go2_agentic_system/: GO2_AGENTIC_SYSTEM_HANDOFF_FOR_CODEX.md  package.xml  setup.cfg  setup.py
src/go2_agentic_system/config/: agent_params.yaml  go2_agent_system.rviz  guardrails.sample.yaml  named_locations.sample.yaml  slam_localization_template.yaml  twist_mux_go2_agent.sample.yaml
src/go2_agentic_system/go2_agentic_system/: command_console_node.py  command_utils.py  image_utils.py  image_utils.py:Zone.Identifier  keyboard_teleop_node.py  memory_manager_node.py  navigation_agent_node.py  openrouter_client.py  operator_console_node.py  parser.py  patrol_events.py  safety_supervisor_node.py  semantic_map_visualizer_node.py  semantic_memory_node.py  speech_output_node.py  storage.py  supervisor_node.py  survey_mode_node.py  task_planner_node.py  voice_command_node.py
src/go2_agentic_system/launch/: agent_system.launch.py  sparky_full_system.launch.py  survey_memory.launch.py
src/go2_agentic_system/test/: test_openrouter_client.py
src/go2_colmap_pipeline_pkg/: README.md  package.xml  setup.cfg  setup.py
src/go2_colmap_pipeline_pkg/config/: example_camera_extrinsics.yaml
src/go2_colmap_pipeline_pkg/go2_colmap_pipeline/: bag_to_dataset.py  colmap_camera.py  common.py  full_pipeline.py  mesh_to_obj.py  run_colmap.py  transforms.py
src/go2_colmap_pipeline_pkg/resource/: go2_colmap_pipeline
src/go2_colmap_pipeline_pkg/scripts/: isaacsim_import_colmap_env.py
src/go2_isaac_bridge/: package.xml  setup.cfg  setup.py
src/go2_isaac_bridge/go2_isaac_bridge/: udp_bridge_node.py
src/go2_isaac_bridge/launch/: isaac_bridge.launch.py
src/go2_remote_teleop/: go2_remote_teleop.py  robot_autonomous_log.txt
src/go2_robot_sdk/: package.xml
src/go2_robot_sdk/config/: mapper_params_online_async.yaml  nav2_params.yaml  single_robot_conf.rviz  twist_mux.yaml
src/go2_robot_sdk/launch/: mapping.launch.py  navigation.launch.py  navigation_no_docking.launch.py  robot.launch.py  robot_cpp.launch.py  webrtc_web.launch.py
src/go2_semantic_nav_agent/: GO2_SEMANTIC_NAV_AGENT_HANDOFF_FOR_CODEX.md  README.md  RESTORE_NOTES.txt  package.xml  setup.cfg  setup.py  setup.py:Zone.Identifier
src/go2_semantic_nav_agent/config/: amcl_params.yaml  semantic_nav.rviz
src/go2_semantic_nav_agent/go2_semantic_nav_agent/: patch_go2_sdk_scan_topics.py  place_store.py  route_store.py  scan_retimestamp_node.py  semantic_memory.py  semantic_nav_console.py  semantic_nav_fresh_start.py  semantic_nav_node.py  session_store.py
src/go2_semantic_nav_agent/launch/: semantic_nav_resume.launch.py  semantic_nav_rviz.launch.py  semantic_nav_teach.launch.py
src/go2_semantic_nav_agent/test/: test_route_store.py
src/lidar_processor/lidar_processor/: lidar_to_pointcloud_node.py  pointcloud_aggregator_node.py
tools/isaaclab/: go2_ros_backend.py
(+2 files in other folders)
