<?xml version="1.0"?>
<package format="3">
  <name>go2_agentic_motion_skills</name>
  <version>0.4.0</version>
  <description>Grounded Unitree SDK2 motion skills for Sparky.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
