<?xml version="1.0"?>
<package format="3">
  <name>go2_agentic_multiagent_voice_nav</name>
  <version>0.4.0</version>
  <description>Omi + local STT + orchestrator + camera agent + TTS overlay for Sparky.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
