<?xml version="1.0"?>
<package format="3">
  <name>go2_agentic_system</name>
  <version>0.1.1</version>
  <description>Top-level launch wrapper for Sparky agentic system.</description>

  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2_agentic_motion_skills</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
