<?xml version="1.0"?>
<package format="3">
  <name>go2_isaac_bridge</name>
  <version>0.0.1</version>
  <description>ROS-side bridge between go2_ros and IsaacLab Go2 backend.</description>
  <maintainer email="dhruvkumarkamleshbhai.patel@sjsu.edu">Dhruv Patel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
